# platzi-cursos

./: .eslintcache  .firebaserc  .gitignore  App.js  Cargo.toml  README.md  alias.graphql  angular.json  benchmarking.js  build.py  carousel.html  console.js  db.js  debugger.txt  directives.graphql  errorFirst.js  firebase.json  fragments.graphql  go.mod  index.html  index.js  input.txt  login.html  main  main.go  main.py  package-lock.json  package.json  pom.xml  process.js  register.html  run.py  stream.js  style.css  system.js  variables.graphql  webpack.config.js
angular-platzi-store/: firebase.json  karma.conf.js  package-lock.json
api/: vercel.json
automatize/: package.json
example/: express-jsx.js  index.js  package-lock.json
frontend/: README.md  carousel.html  index.html  style.css
godot-taller/: project.godot
golang-basico/: go.mod  go.sum
graph-ql/: db.js  interfaces.graphql  package.json
hooks/: useMountFetch.ts
interpreter/: .gitignore  CMakeLists.txt
intro-to-ml/: README.md
ios/: Podfile
java-se-persistencia/: docker-compose.yml
java-spring/: build.gradle
javascript-async/: package.json
lib/: error-handler.js  mongo.js  mutations.js  queries.js  resolvers.js  schema.graphql  types.js
lpp/: ast.py  lexer.py  parser.py  token.py
mypackage/: mypackage.go
native/: index.js
nestjs-auth-mongo/: package-lock.json  package.json
nestjs-backend/: package-lock.json  package.json
nextjs-platzi-avo/: index.d.ts  package-lock.json  (+1 more)
rust-blockchain/: Cargo.toml
rust-blockchain/public/: index.html
rust-blockchain/src/: lib.rs
(+398 files in other folders)
