[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = "0.9.0"
heron = { version = "5.0.2", default-features = false, features = ["2d"] }
rand = "0.8.5"
wasm-bindgen = "0.2"
